# llmdata

./: .gitignore  README.md  main.py  prompt_asp.txt  pyproject.toml  sudoku.py  test.ipynb
data/graph_fill_in/: data.json  prompt_template.txt
data/graph_fill_in/asp_code/: problem_0.asp  problem_1.asp  problem_10.asp  problem_100.asp  problem_101.asp  problem_102.asp  problem_103.asp  problem_104.asp  problem_105.asp  problem_106.asp  problem_107.asp  problem_108.asp  problem_109.asp  problem_11.asp  problem_110.asp  problem_111.asp  problem_112.asp  problem_113.asp  problem_114.asp  problem_115.asp  problem_116.asp  problem_117.asp  problem_118.asp  problem_119.asp  problem_12.asp  problem_120.asp  problem_121.asp  problem_122.asp  problem_123.asp  problem_124.asp  problem_125.asp  problem_126.asp  problem_127.asp  problem_128.asp  problem_129.asp  problem_13.asp  problem_130.asp  problem_131.asp  problem_132.asp  problem_133.asp  (+158 more)
data/graph_validity/: data.json  invalid_prompt_template.txt  valid_prompt_template.txt
data/graph_validity/asp_code/: problem_0.asp  problem_1.asp  problem_10.asp  problem_100.asp  problem_101.asp  (+395 more)
data/sudoku_fill_in/: data.json  prompt_template.txt
data/sudoku_validity/: data.json  invalid_prompt_template.txt  valid_prompt_template.txt
generators/: graph.py  set_cards.py  sudoku.py  utils.py
generators/prompt_templates/: graph_fill_in.txt  graph_validity.txt  set_validity.txt  sudoku_fill_in.txt  sudoku_validity.txt
generators/set_game/: set_game.py
notebooks/: asp.ipynb  graph.ipynb  test.ipynb
solvers/: clingo_solver.py
(+775 files in other folders)
