[tool.poetry]
name = "llm-data"
version = "0.1.0"
description = ""
authors = ["dqmis <dom.seputis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sudokum = "^0.0.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
networkx = "^3.3"
clingo = "^5.7.1"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
